New "logged_in_as_player_required" decorator
Also: fix typo that, bizarrely, isn't a syntax error

Guess I hadn't run the unit tests in a while!

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 STILL TODO:
 
+* Write my own `@logged_in_as_player_required` decorator, that is like `@login_required`, but checks that there is a corresponding Player object, and redirects with an error message.
+
 * the coverage report has a lot of "empty"s near the right margin, and "coverage html" prints `CoverageWarning: No contexts were measured`
 
 * paginate the player and table lists
