--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 STILL TODO:
 
-* combine PlayerMessage with LobbyMessage.  Maybe if the recipient is NULL that means it's a lobby message?  But then what do I do when I want to have messages directed at a table?  Maybe add a "recipient model" column, so that the target of a message can be NULL (meaning lobby), or anything with a django model.
+* When displaying the signup page, put text focus on the first field, so I can start typing without having to hit TAB
 
 * When sending a chat message, make RET submit, so that we don't have to actually click on the button.
 
@@ -19,6 +19,8 @@ STILL TODO:
   In particular, what tables they played at, and who else was at those tables.
 
 DONE:
+
+* combine PlayerMessage with LobbyMessage.  Maybe if the recipient is NULL that means it's a lobby message?  But then what do I do when I want to have messages directed at a table?  Maybe add a "recipient model" column, so that the target of a message can be NULL (meaning lobby), or anything with a django model.
 
 * Inspired by https://spookylukey.github.io/django-views-the-right-way/, convert some CBVs into function-based views.
 
