--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,5 @@
 STILL TODO:
 
-* Write a player-list partial template.  It should include both the "lookin' for love" filter, and a new "are they in the lobby" filter.
-  Use that on both "/players/" and "/lobby/" (distinguished only by different default settings on those filters)
-
 * when not logged in, we still attempt to listen to server-sent events ... but fail with 400 (cuz that endpoint requires authentication, I guess).
 
 * When sending a chat message, the newly-appended log line isn't styled quite the same as those logs that were sent by the server when the page loaded.
@@ -24,6 +21,10 @@ STILL TODO:
   In particular, what tables they played at, and who else was at those tables.
 
 DONE:
+
+* Write a player-list partial template.  It should include both the "lookin' for love" filter, and a new "are they in the lobby" filter.
+  Use that on both "/players/" and "/lobby/" (distinguished only by different default settings on those filters)
+  - It's not a partial; I just made "players" do double-duty
 
 * When displaying the signup page, put text focus on the first field, so I can start typing without having to hit TAB
 
