OK this seems to work, but TODO:
* could sure use some refactoring in the player.py view
* whatever happened to the chat log in the lobby??

--- a/TODO.txt
+++ b/TODO.txt
@@ -15,6 +15,7 @@ STILL TODO:
 * Maybe give some idea of user activity, in the lobby: e.g. if a user's "last_login" was a while ago, make the font dim; or if they last posted a chat message or sat at a table or took an action in a game.
 
 * When sending a chat message, make RET submit, so that we don't have to actually click on the button.
+  Note that simply using htmx with `hx-trigger="keyup[key=='Enter']"` doesn't work on mobile, since they ain't no key events 😭
 
 * when bob logs out, his name should vanish from the "lobby"
 
