--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 STILL TODO:
 
+* The chat log can get annoyingly long -- the new messages are at the bottom, so I gotta scroll to see them.
+
 * The datatables default of 10 entries per page isn't enough; make it 100 or something.
 
 * The new "lobby view" ("/players/?seated=False") doesn't tell you how many *total* players there are.  (Because I nuked the " 3 / 15 players" thing)
@@ -9,8 +11,6 @@ STILL TODO:
 * It should be blindingly obvious that you have a partner so you don't have to go around looking for another one.
 
 * when not logged in, we still attempt to listen to server-sent events ... but fail with 400 (cuz that endpoint requires authentication, I guess).
-
-* When sending a chat message, the newly-appended log line isn't styled quite the same as those logs that were sent by the server when the page loaded.
 
 * Maybe give some idea of user activity, in the lobby: e.g. if a user's "last_login" was a while ago, make the font dim; or if they last posted a chat message or sat at a table or took an action in a game.
 
@@ -30,6 +30,8 @@ STILL TODO:
   In particular, what tables they played at, and who else was at those tables.
 
 DONE:
+
+* When sending a chat message, the newly-appended log line isn't styled quite the same as those logs that were sent by the server when the page loaded.
 
 * Write a player-list partial template.  It should include both the "lookin' for love" filter, and a new "are they in the lobby" filter.
   Use that on both "/players/" and "/lobby/" (distinguished only by different default settings on those filters)
