--- a/TODO.txt
+++ b/TODO.txt
@@ -2,15 +2,13 @@ STILL TODO:
 
 * splitsville for someone seated needs to update the table detail that shows at the bottom of the page.
 
-* django_web_messages (as opposed to my chat messages) aren't displayed as soon as they're generated; instead, I only notice them when I refresh the page, and then there's a backlog
+* django_web_messages (as opposed to my chat messages) aren't displayed as soon as they're generated; instead, I only notice them when I refresh the page, and then there's a backlog.
 
-* rename the "foo-html-partial.html" files to "foo-partial.html"
+  I assume django_web_messages is designed to display only when I refresh the page; although istr seeing something somewhere that makes them pop up as alerts or something.
 
 * The datatables default of 10 entries per page isn't enough; make it 100 or something.
 
 * The new "lobby view" ("/players/?seated=False") doesn't tell you how many *total* players there are.  (Because I nuked the " 3 / 15 players" thing)
-
-* It should be blindingly obvious that you have a partner so you don't have to go around looking for another one.
 
 * when not logged in, we still attempt to listen to server-sent events ... but fail with 400 (cuz that endpoint requires authentication, I guess).
 
@@ -18,10 +16,15 @@ STILL TODO:
 
 * when bob logs out, his name should vanish from the "lobby"
 
+  It's not obvious how to tell if a player is logged in.  There's a `django_sessions` table which appears to hold, I guess, cookie data; but it's not obvious how I can connect that to a Player.
+
+  Also: if bob has *two* separate browser windows open, logging out on just one of them shouldn't make him vanish from the lobby! So I guess I'd need to keep track of the number of active sessions, and only vanish him out if that drops to zero.
+
 * the coverage report has a lot of "empty"s near the right margin, and "coverage html" prints `CoverageWarning: No contexts were measured`
 
-* paginate the player and table lists
+* paginate the table list
   <https://spookylukey.github.io/django-views-the-right-way/list-view.html#displaying-a-list-of-objects> has an example
+  or maybe just use datatables
 
 * figure out why "generate_fake_data" only creates 7 players per second -- it otta do hundreds.
 
@@ -29,6 +32,10 @@ STILL TODO:
   In particular, what tables they played at, and who else was at those tables.
 
 DONE:
+
+* paginated the player list a while ago, by using datatables, which gives me pagination for free.
+
+* rename the "foo-html-partial.html" files to "foo-partial.html"
 
 * sam is looking at his own page
   bob is looging at sam's page
@@ -47,6 +54,8 @@ DONE:
   When juan partners up, abigail sees "JUAN is muh partner" and "their partner is you! juan".
 
   I suspect I wrote the template partial on the assumption that there were only two people in the world -- the player and their partner.
+
+* It should be blindingly obvious that you have a partner so you don't have to go around looking for another one.
 
 * When someone clicks the "partner up" button, the other person needs to get an alert, telling them that that happened.
   And their "player detail" page, or at least some section of it, needs to refresh so that it now says who their partner is.
