--- a/TODO.txt
+++ b/TODO.txt
@@ -12,17 +12,13 @@ STILL TODO:
 
   I assume django_web_messages is designed to display only when I refresh the page; although istr seeing something somewhere that makes them pop up as alerts or something.
 
-* The new "lobby view" ("/players/?seated=False") doesn't tell you how many *total* players there are.  (Because I nuked the " 3 / 15 players" thing)
-
-* when not logged in, we still attempt to listen to server-sent events ... but fail with 400 (cuz that endpoint requires authentication, I guess).
-
 * Maybe give some idea of user activity, in the lobby: e.g. if a user's "last_login" was a while ago, make the font dim; or if they last posted a chat message or sat at a table or took an action in a game.
 
 * when bob logs out, his name should vanish from the "lobby"
 
-  It's not obvious how to tell if a player is logged in.  There's a `django_sessions` table which appears to hold, I guess, cookie data; but it's not obvious how I can connect that to a Player.
+  ... although if I'm consistent, bob shouldn't be in the lobby if he's never logged in; and yet, my "generate_fake_data" tool creates lots of users who have never logged in.  Maybe I should teach it to log half of the in, or something.
 
-  Also: if bob has *two* separate browser windows open, logging out on just one of them shouldn't make him vanish from the lobby! So I guess I'd need to keep track of the number of active sessions, and only vanish him out if that drops to zero.
+  It's not obvious how to tell if a player is logged in.  There's a `django_sessions` table which appears to hold, I guess, cookie data; but it's not obvious how I can connect that to a Player.
 
 * the coverage report has a lot of "empty"s near the right margin, and "coverage html" prints `CoverageWarning: No contexts were measured`
 
@@ -36,6 +32,14 @@ STILL TODO:
   In particular, what tables they played at, and who else was at those tables.
 
 DONE:
+
+* when not logged in, we still attempt to listen to server-sent events ... but fail with 400 (cuz that endpoint requires authentication, I guess).
+
+  - I've definitely seen this recently, but ... I can't think of any page that calls addEventListener that doesn't also require login.
+
+* The new "lobby view" ("/players/?seated=False") doesn't tell you how many *total* players there are.  (Because I nuked the " 3 / 15 players" thing)
+
+  - Sure it does.  At least, it has done since I added Datatables.
 
 * REGRESSION
   When sending a chat message, but failing -- because e.g. you or the recipient are seated at a table, there's no feedback about the failure.  Either
