--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 STILL TODO:
 
+* The auction history is one call per line, but I think newspapers used to display it with four columns -- one for each seat.  I think.
+
 * Think about optimization (without actually doing it, since that would be premature):
   Seems we're sending events to a "public" channel, which means if we have 1,000 browsers listening for those events, most of them will ignore most events (since bob only cares about events that affect him).
 
