--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,9 @@
 STILL TODO:
 
+* reload the bidding box once we've made a call with it
+
+* catch the "illegal call" thing somewhere and return it as an HttpResponseForbidden or similar
+
 * If the above are true, but it's not request.user's turn to call, disable the bidding box visually somehow.
 
 * The auction history is one call per line, but I think newspapers used to display it with four columns -- one for each seat.  I think.
