--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,6 @@
 STILL TODO:
 
-* reload the bidding box once we've made a call with it
-
-* catch the "illegal call" thing somewhere and return it as an HttpResponseForbidden or similar
+* reload or hide (as appropriate) the bidding box when we get the "someone just made a call" message.
 
 * If the above are true, but it's not request.user's turn to call, disable the bidding box visually somehow.
 
@@ -59,6 +57,8 @@ STILL TODO:
   In particular, what tables they played at, and who else was at those tables.
 
 DONE:
+
+* catch the "illegal call" thing somewhere and return it as an HttpResponseForbidden or similar
 
 * Only show bidding box if auction is incomplete, *and* request.user is seated at the table.
 
