--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 STILL TODO:
 
+* bob is able to call at someone else's table!!
+
 * reload or hide (as appropriate) the bidding box when we get the "someone just made a call" message.
 
 * If the above are true, but it's not request.user's turn to call, disable the bidding box visually somehow.
