--- a/TODO.txt
+++ b/TODO.txt
@@ -1,32 +1,21 @@
 STILL TODO:
 
-* Occasionally some page will take ages to load.  Like, right now http://localhost:8000/players/?lookin_for_love=True took 34 seconds.
+* If the auction is incomplete, and request.user is seated at the table *but* its not their turn to call, disable the bidding box visually somehow.
 
-  There are only 17 players.
-
-  Nothing of interest in the stdout or stderr of daphne.
-
-  I didn't think to look in the Django debug toolbar for timing info.
-
-  <https://developer.chrome.com/docs/devtools/network/reference/#timing-explanation> says
-  > Queueing. The browser queues requests before connection start and when:
-  >    There are higher priority requests.
-  >    There are already six TCP connections open for this origin, which is the limit. Applies to HTTP/1.0 and HTTP/1.1 only.
-
-  I wonder if that's pertinent.  The browser is indeed using HTTP/1.1 (as revealed by opening the developer tools, clicking the "Network" tab, right-clicking any column, and selecting Protocol from the menu)
-
-* If the above are true, but it's not request.user's turn to call, disable the bidding box visually somehow.
-
-* The auction history is one call per line, but I think newspapers used to display it with four columns -- one for each seat.  I think.
+* paginate the table list
+  <https://spookylukey.github.io/django-views-the-right-way/list-view.html#displaying-a-list-of-objects> has an example
+  or maybe just use datatables
 
 * Think about optimization (without actually doing it, since that would be premature):
   Seems we're sending events to a "public" channel, which means if we have 1,000 browsers listening for those events, most of them will ignore most events (since bob only cares about events that affect him).
 
   So, consider which events really need to be public, and which can be "private".
 
-  e.g player_detail_view sends "splitsville" in response to a player clicking the button, but surely only (at most) four players need to know about this *instantly*; other people can reload the page to find out who's partnered with whom.
+  e.g player_detail_view sends "splitsville" (to the "partnerships" channel) in response to a player clicking the button, but surely only (at most) four players need to know about this *instantly*; other people can reload the page to find out who's partnered with whom.
 
   Otoh, a given player probably won't send that many messages; and sending a message is likely cheaper than rendering and returning a whole response, so ... 🤷
+
+  Also it occurs to me that, if I want to have bot(s) to take the place of humans, they will need to know what's going on; and it might be simpler to have a single bot process that is aware of every event at every table, as opposed to lots of processes that each subscribe to just one "narrow" event channel.
 
 * when brenda speaks to james, but james' browser is looking at anything other than brenda's page, james needs to get an alert.
 
@@ -44,13 +33,9 @@ STILL TODO:
 
 * when bob logs out, his name should vanish from the "lobby"
 
-  ... although if I'm consistent, bob shouldn't be in the lobby if he's never logged in; and yet, my "generate_fake_data" tool creates lots of users who have never logged in.  Maybe I should teach it to log half of the in, or something.
+  ... although if I'm consistent, bob shouldn't be in the lobby if he's never logged in; and yet, my "generate_fake_data" tool creates lots of users who have never logged in.  Maybe I should teach it to log half of them in, or something.
 
   It's not obvious how to tell if a player is logged in.  There's a `django_sessions` table which appears to hold, I guess, cookie data; but it's not obvious how I can connect that to a Player.
-
-* paginate the table list
-  <https://spookylukey.github.io/django-views-the-right-way/list-view.html#displaying-a-list-of-objects> has an example
-  or maybe just use datatables
 
 * figure out why "generate_fake_data" only creates 7 players per second -- it otta do hundreds.
 
@@ -60,6 +45,29 @@ STILL TODO:
   In particular, what tables they played at, and who else was at those tables.
 
 DONE:
+
+* The auction history is one call per line, but I think newspapers used to display it with four columns -- one for each seat.  I think.
+
+* Occasionally some page will take ages to load.  Like, right now http://localhost:8000/players/?lookin_for_love=True took 34 seconds.
+
+  There are only 17 players.
+
+  Nothing of interest in the stdout or stderr of daphne.
+
+  I didn't think to look in the Django debug toolbar for timing info.
+
+  <https://developer.chrome.com/docs/devtools/network/reference/#timing-explanation> says
+  > Queueing. The browser queues requests before connection start and when:
+  >    There are higher priority requests.
+  >    There are already six TCP connections open for this origin, which is the limit. Applies to HTTP/1.0 and HTTP/1.1 only.
+
+  I wonder if that's pertinent.  The browser is indeed using HTTP/1.1 (as revealed by opening the developer tools, clicking the "Network" tab, right-clicking any column, and selecting Protocol from the menu)
+
+  -- I'm not *certain* this is fixed, but I don't think I've noticed this since I got Daphne to talk HTTP/2.  Note that this only helps if you're using SSL: <https://en.wikipedia.org/w/index.php?title=HTTP%2F2&section=6#Encryption> says
+
+      Although the standard itself does not require usage of encryption,[49] all major client implementations (Firefox,[50] Chrome, Safari, Opera, IE, Edge) have stated that they will only support HTTP/2 over TLS, which makes encryption de facto mandatory.[51]
+
+  Thank God Tailscale makes SSL easy.
 
 * I had four browser windows open, each to a different player; all 4 players were seated at the same table.
 
