--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 STILL TODO:
 
+* If the auction is passed out, either shut down the table completely, or at least indicate that it's moribund.
+
 * In the table list, include the auction status, or play status, as appropriate.
 
 * paginate the table list
