Let the splitting ... begin

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,7 @@ STILL TODO:
 * Performance.
 
   * pages load awfully slowly.  Even after paginating the player list -- so that only 10 players appear per page -- that page seems to take 500ms of CPU time on the server, and over three seconds to fully render.  That's nuts.
+    Splitting settings into prod and dev seems to greatly speed up prod (that django debug toolbar is slow, it seems).
   * figure out why "generate_fake_data" only creates 7 players per second -- it otta do hundreds.
   * Unit tests seem slow, too.
 
