Enable simple profiling for "generate_fake_data"
Busted: now I know why it's slow.

--- a/TODO.txt
+++ b/TODO.txt
@@ -5,6 +5,7 @@ STILL TODO:
   * pages load awfully slowly.  Even after paginating the player list -- so that only 10 players appear per page -- that page seems to take 500ms of CPU time on the server, and over three seconds to fully render.  That's nuts.
     Splitting settings into prod and dev seems to greatly speed up prod (that django debug toolbar is slow, it seems).
   * figure out why "generate_fake_data" only creates 7 players per second -- it otta do hundreds.
+    Unsurprisingly, it's _hashlib.pbkdf2_hmac, whose whole purpose in life is to be slow.
   * Unit tests seem slow, too.
 
 * If the auction is passed out, either shut down the table completely, or at least indicate that it's moribund.
