Sped up the unit tests.
Before: 14 seconds.
After : 1.6 seconds.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,5 @@
 STILL TODO:
 
-* Performance.
-
-  * Unit tests seem slow, too.
-
 * If the auction is passed out, either shut down the table completely, or at least indicate that it's moribund.
 
 * In the table list, include the auction status, or play status, as appropriate.
@@ -45,6 +41,8 @@ STILL TODO:
 DONE:
 
 * Performance.
+
+  * Unit tests seem slow, too.  Again, it's _hashlib.pbkdf2_hmac.
 
   * pages load awfully slowly.  Even after paginating the player list -- so that only 10 players appear per page -- that page seems to take 500ms of CPU time on the server, and over three seconds to fully render.  That's nuts.
     Splitting settings into prod and dev seems to greatly speed up prod (that django debug toolbar is slow, it seems).
