--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 STILL TODO:
 
+* Make the auction record vanish once the opening lead has been made.
+
 * Whatever happened to lobby chat?  It must have slipped into a crack at some point.
 
 * If the auction is passed out, either shut down the table completely, or at least indicate that it's moribund.
