--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,5 @@
 STILL TODO:
 
-* Somehow the cards in one dude's hand aren't sorted, even though they're sorted in the board:
-  https://erics-work-macbook-pro.tail571dc2.ts.net/table/14 shows East holding 9, K, 4, J of diamonds (in that order);
-  https://erics-work-macbook-pro.tail571dc2.ts.net/admin/app/board/14/change/ shows East's cards as "♣2♣6♣T♣Q♦4♦9♦J♦K♥4♠3♠4♠T♠Q" (i.e., nicely sorted)
-
 * Consider timestamps for important stuff, in particular calls and plays.
 
 * Maybe a "Table" isn't worth modeling at all; instead model "games" or "hands" -- both current and past.  A "game" or a "hand" is pretty much what I'm now calling a Table -- four players plus a specific board, plus a possibly-complete transcript of what they did.
@@ -58,6 +54,12 @@ STILL TODO:
   In particular, what tables they played at, and who else was at those tables.
 
 DONE:
+
+* Somehow the cards in one dude's hand aren't sorted, even though they're sorted in the board:
+  https://erics-work-macbook-pro.tail571dc2.ts.net/table/14 shows East holding 9, K, 4, J of diamonds (in that order);
+  https://erics-work-macbook-pro.tail571dc2.ts.net/admin/app/board/14/change/ shows East's cards as "♣2♣6♣T♣Q♦4♦9♦J♦K♥4♠3♠4♠T♠Q" (i.e., nicely sorted)
+
+  Looks like models.Table.current_cards_by_seat returns a dict of *sets* of cards, and we all know sets aren't ordered.  Wtf was I thinking
 
 * The auction log is missing some events, and fails to update thereafter, until I reload the page
   I see this in the browser's console
